--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </script>
 
-<center><h1>Utopian pending and unreviewed contributions</h1></center>
+<center><h1>Utopian unreviewed contributions</h1></center>
 
 <!-- HTML -->
 <div id="chartdiv"></div>
